# Static-Qt-Win

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-windows.yml
src/: main.cpp
